Modified the library according to recent comments

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "license": "proprietary",
   "authors": [
     {
-      "name": "Peter First",
+      "name": "Peter the First",
       "email": "kon.peter.ua@gmail.com"
     }
   ],
